<resources>
    <string name="app_name">新闻随意看升级版</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="login_edit_name_hint">请输入用户昵称</string>
    <string name="login_edit_pwd_hint">密码：6到16个字符</string>
    <string name="login_button_register">注册</string>
    <string name="login_button_forgetpwd">忘记密码</string>
    <string name="login_button_login">登录</string>
</resources>
