<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/editText_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/login_edit_name_hint"
            >
            <requestFocus/>
        </EditText>
        <EditText
            android:id="@+id/editText_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/login_edit_pwd_hint"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_register"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:background="@drawable/drawable_normalbutton_selector"
                style="?android:attr/buttonBarStyle"
                />
            <Button
                android:id="@+id/button_forgerPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_forgetpwd"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:background="@drawable/drawable_normalbutton_selector"
                style="?android:attr/buttonBarStyle"
                />
            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_login"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:background="@drawable/drawable_normalbutton_selector"
                style="?android:attr/buttonBarStyle"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>